--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
                     this is the perfect time to use a new one)</li>
                 <li>Upload your Microsoft 365 profile image here: <input type="file" id="upload" accept="image/*" />
                 </li>
-                <li>Preview your image and make sure it looks like you want it to - you can drag/drop the badge if you would like</li>
+                <li>Preview your image and make sure it looks like you want it to - you can drag/drop the badge if you
+                    would like</li>
                 <li>Download your profile image, now with a Copilot Champion badge</li>
-                <li>Go back to your <a
-                        href="https://myaccount.microsoft.com/?ref=MeControl" target="_blank">your profile</a>, upload your new image, and let the world know you're a Copilot
+                <li>Go back to your <a href="https://myaccount.microsoft.com/?ref=MeControl" target="_blank">your
+                        profile</a>, upload your new image, and let the world know you're a Copilot
                     Champion!</li>
             </ul>
-
+            <p><a href="https://www.kizan.com/microsoft-365-copilot">Learn more"</a> about how KiZAN can enable your users as Copilot Champions</p>
+        </div>
             <div class="toolbar">
                 <label>
                     Size:
-                    <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28">
+                    <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
+                        id="siteOut">0.28</output>
                 </label>
                 <button id="resetBtn">Reset badge</button>
                 <button id="download">Download</button>
@@ -42,9 +45,18 @@
                 <div style="max-width: 720px; border: 1px solid #ccc; position: relative;">
                     <canvas id="canvas" style="width: 100%; height: auto; touch-action: none; cursor: grab;"></canvas>
                 </div>
+                <p>
+                This solution is not KiZAN supported, but we are happy to help you with your Microsoft 365 Copilot
+                journey. <a href="https://www.kizan.com/microsoft-365-copilot">Learn more</a> about how KiZAN can
+                enable your users as Copilot Champions.
+                </p>
+                <p>
+                You can view the source code for this tool on Justin Kobel's github at <a href="https://www.github.com/justinkobel/CopilotChampionBadge">CopilotChampionBadge
+                </p>
 
             </div>
             <script src="script.js"></script>
+
 </body>
 
 </html>
