--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Headshot Overlay Tool</title>
+    <title>Copilot Champions Badge Generator</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -27,35 +27,37 @@
                         profile</a>, upload your new image, and let the world know you're a Copilot
                     Champion!</li>
             </ul>
-            <p><a href="https://www.kizan.com/microsoft-365-copilot">Learn more"</a> about how KiZAN can enable your users as Copilot Champions</p>
+            <p><a href="https://www.kizan.com/microsoft-365-copilot">Learn more"</a> about how KiZAN can enable your
+                users as Copilot Champions</p>
         </div>
-            <div class="toolbar">
-                <label>
-                    Size:
-                    <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
-                        id="siteOut">0.28</output>
-                </label>
-                <button id="resetBtn">Reset badge</button>
-                <button id="download">Download</button>
+        <div class="toolbar">
+            <label>
+                Size:
+                <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
+                    id="siteOut">0.28</output>
+            </label>
+            <button id="resetBtn">Reset badge</button>
+            <button id="download">Download</button>
+        </div>
+        <div class="badge-container">
+
+
+            <!-- Responsive container; canvas will scale visually, while keeping crisp rendering -->
+            <div style="max-width: 720px; border: 1px solid #ccc; position: relative;">
+                <canvas id="canvas" style="width: 100%; height: auto; touch-action: none; cursor: grab;"></canvas>
             </div>
-            <div class="badge-container">
-
-
-                <!-- Responsive container; canvas will scale visually, while keeping crisp rendering -->
-                <div style="max-width: 720px; border: 1px solid #ccc; position: relative;">
-                    <canvas id="canvas" style="width: 100%; height: auto; touch-action: none; cursor: grab;"></canvas>
-                </div>
-                <p>
+            <p>
                 This solution is not KiZAN supported, but we are happy to help you with your Microsoft 365 Copilot
                 journey. <a href="https://www.kizan.com/microsoft-365-copilot">Learn more</a> about how KiZAN can
                 enable your users as Copilot Champions.
-                </p>
-                <p>
-                You can view the source code for this tool on Justin Kobel's github at <a href="https://www.github.com/justinkobel/CopilotChampionBadge">CopilotChampionBadge
-                </p>
+            </p>
+            <p>
+                View the source code for this tool on Justin Kobel's github at <a
+                    href="https://www.github.com/justinkobel/CopilotChampionBadge">CopilotChampionBadge</a>
+            </p>
 
-            </div>
-            <script src="script.js"></script>
+        </div>
+        <script src="script.js"></script>
 
 </body>
 
