--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
                         profile</a>, upload your new image, and let the world know you're a Copilot
                     Champion!</li>
             </ul>
-            <p><a href="https://www.kizan.com/microsoft-365-copilot">Learn more"</a> about how KiZAN can enable your
-                users as Copilot Champions</p>
         </div>
         <div class="toolbar">
             <label>
                 Size:
                 <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
-                    id="siteOut">0.28</output>
+                    id="sizeOut">0.28</output>
             </label>
             <button id="resetBtn">Reset badge</button>
             <button id="download">Download</button>
