remove reset button
and make size slider more descriptive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </li>
                 <li>Preview your image and make sure it looks like you want it to - you can drag/drop the badge if you
                     would like</li>
-                <li>Download your profile image, now with a Copilot Champion badge</li>
+                <li>Download your profile image, now with a Copilot Champion badge: <button id="download">Download</button></li>
                 <li>Go back to your <a href="https://myaccount.microsoft.com/?ref=MeControl" target="_blank">your
                         profile</a>, upload your new image, and let the world know you're a Copilot
                     Champion!</li>
@@ -30,12 +30,10 @@
         </div>
         <div class="toolbar">
             <label>
-                Size:
+                Badge Size:
                 <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
                     id="sizeOut">0.28</output>
             </label>
-            <button id="resetBtn">Reset badge</button>
-            <button id="download">Download</button>
         </div>
         <div class="badge-container">
 
