--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
                 </li>
                 <li>Preview your image and make sure it looks like you want it to - you can drag/drop the badge if you
                     would like</li>
-                <li>Download your profile image, now with a Copilot Champion badge: <button id="download">Download</button></li>
+                <li>Download your profile image, now with a Copilot Champion badge: <button
+                        id="download">Download</button></li>
                 <li>Go back to your <a href="https://myaccount.microsoft.com/?ref=MeControl" target="_blank">your
                         profile</a>, upload your new image, and let the world know you're a Copilot
                     Champion!</li>
             </ul>
         </div>
-        <div class="toolbar">
-            <label>
-                Badge Size:
-                <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
-                    id="sizeOut">0.28</output>
-            </label>
-        </div>
-        <div class="badge-container">
 
-
-            <!-- Responsive container; canvas will scale visually, while keeping crisp rendering -->
+        <div class="badge-container" id="canvasContainer">
+            <div class="toolbar">
+                <label>
+                    Badge Size:
+                    <input id="sizeRange" type="range" min="0.05" max="0.8" step="0.01" value="0.28"><output
+                        id="sizeOut">28%</output>
+                </label>
+                <label>
+                    Show Guide Circle:<input id="showGuide" type="checkbox" checked>
+                </label>
+            </div>
             <div style="max-width: 720px; border: 1px solid #ccc; position: relative;">
                 <canvas id="canvas" style="width: 100%; height: auto; touch-action: none; cursor: grab;"></canvas>
             </div>
