--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <div style="max-width: 720px; border: 1px solid #ccc; position: relative;">
                 <canvas id="canvas" style="width: 100%; height: auto; touch-action: none; cursor: grab;"></canvas>
             </div>
+            
+
+        </div>
+        <div class="footer">
             <p>
                 This solution is not KiZAN supported, but we are happy to help you with your Microsoft 365 Copilot
                 journey. <a href="https://www.kizan.com/microsoft-365-copilot">Learn more</a> about how KiZAN can
@@ -53,7 +57,6 @@
                 View the source code for this tool on Justin Kobel's github at <a
                     href="https://www.github.com/justinkobel/CopilotChampionBadge">CopilotChampionBadge</a>
             </p>
-
         </div>
         <script src="script.js"></script>
 
